       the readtable currently in effect.

changes in sbcl-0.8.10 relative to sbcl-0.8.9:
  * Support for the forthcoming 2.0 version of the NetBSD kernel
    running on x86 hardware has been added.  (thanks to Perry
    E. Metzger most immediately, and others for their past work)
  * [placeholder for DX summary]
    ** user code with &REST lists declared dynamic-extent, under high
       speed or space and low safety and debug optimization policy.
  * The manual has been converted to Texinfo format and the debugger
    chapter from the cmucl manual has been added.
  * A facility has been added to extract documentation strings from
    sbcl and store them as Texinfo-formatted snippets for inclusion in
    the manual (via Texinfo's @include directive)
  * bug fix: compiler emitted division in optimized DEREF.  (thanks for
    the test case to Dave Roberts)
  * bug fix: multidimensional simple arrays loaded from FASLs had fill
    pointers.  (reported by Sean Ross)
  * bug fix: PROFILE output is printed nicely even for large numerical
    values.  (thanks to Zach Beane)
  * bug fix: streams with element-type (SIGNED-BYTE <N>) for <N>
    greater than 32 handle EOF correctly.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.